--- a/src/cssStyles/Description.css
+++ b/src/cssStyles/Description.css
@@ -21,6 +21,7 @@
         display:flex;
         justify-content: center;
         align-items: center;
+        box-shadow:none;
 
 	}
 	.Description_Heading {
@@ -32,12 +33,12 @@
 
 	}
 	.Description_Paragraph {
+        text-align: center;
 		font-size:13px;
         font-weight: bold;
         display:flex;
         justify-content: center;
         align-items: center;
-        text-align: left;
         padding: 5px;
 	}
 }
@@ -50,7 +51,7 @@
         margin-top: 2rem;
         display:flex;
         justify-content: center;
-        align-items: center;
+        text-align: center;
 
 	}
 	.Description_Heading {
@@ -101,6 +102,6 @@
         justify-content: center;
         align-items: center;
         word-wrap: break-word;
-        text-align: left;
+        text-align: justify;
 	}
 }
